docs/api/qiskit/0.39/qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.mdx
---
title: NumPyMinimumEigensolverResult (v0.39)
description: API reference for qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult
---

# NumPyMinimumEigensolverResult

<Class id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/minimum_eigensolvers/numpy_minimum_eigensolver.py" signature="NumPyMinimumEigensolverResult" modifiers="class">
  Bases: [`qiskit.algorithms.minimum_eigensolvers.minimum_eigensolver.MinimumEigensolverResult`](qiskit.algorithms.minimum_eigensolvers.MinimumEigensolverResult "qiskit.algorithms.minimum_eigensolvers.minimum_eigensolver.MinimumEigensolverResult")

  NumPy minimum eigensolver result.

  ## Methods

  <span id="qiskit-algorithms-minimum-eigensolvers-numpyminimumeigensolverresult-combine" />

  ### combine

  <Function id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.combine" signature="NumPyMinimumEigensolverResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### aux\_operators\_evaluated

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.aux_operators_evaluated">
    The aux operator expectation values.

    These values are in fact tuples formatted as (mean, (variance, shots)).
  </Attribute>

  ### eigenstate

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.eigenstate">
    Returns the eigenstate corresponding to the computed minimum eigenvalue.

    **Return type**

    np.ndarray | None
  </Attribute>

  ### eigenvalue

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.eigenvalue">
    The computed minimum eigenvalue.

    **Return type**

    complex | None
  </Attribute>
</Class>

