docs/api/qiskit/0.44/qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.mdx
---
title: NumPyMinimumEigensolverResult
description: API reference for qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult
---

# NumPyMinimumEigensolverResult

<Class id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.25/qiskit/algorithms/minimum_eigensolvers/numpy_minimum_eigensolver.py" signature="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult">
  Bases: [`MinimumEigensolverResult`](qiskit.algorithms.minimum_eigensolvers.MinimumEigensolverResult "qiskit.algorithms.minimum_eigensolvers.minimum_eigensolver.MinimumEigensolverResult")

  NumPy minimum eigensolver result.

  ## Attributes

  ### aux\_operators\_evaluated

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.aux_operators_evaluated" name="aux_operators_evaluated">
    The aux operator expectation values.

    These values are in fact tuples formatted as (mean, (variance, shots)).
  </Attribute>

  ### eigenstate

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.eigenstate" name="eigenstate">
    Returns the eigenstate corresponding to the computed minimum eigenvalue.
  </Attribute>

  ### eigenvalue

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.eigenvalue" name="eigenvalue">
    The computed minimum eigenvalue.
  </Attribute>

  ## Methods

  ### combine

  <Function id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult.combine" name="combine" signature="combine(result)">
    Any property from the argument that exists in the receiver is updated. :param result: Argument result with properties to be set.

    **Raises**

    [**TypeError**](https://docs.python.org/3/library/exceptions.html#TypeError "(in Python v3.12)") – Argument is None
  </Function>
</Class>

